--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-sails-socket-middleware",
-  "version": "0.2.9",
+  "version": "0.3.0",
   "description": "Redux middleware for calling an sails socket.",
   "author": {
     "name": "Sebastian Galler",
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-runtime": "^5.8.25",
     "lodash.isplainobject": "^4.0.6",
+    "lodash.merge": "^4.6.0",
     "sails.io.js": "^1.1.4",
     "socket.io-client": "^1.7.2"
   },
